<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            fancy:fb_text ="@string/gmail"
            android:onClick="bukaGmail"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            fancy:fb_radius = "10dp"
            fancy:fb_fontIconResource="&#xf0e0;"
            fancy:fb_borderWidth="1dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#cbcbcb"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:onClick="bukaSms"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            fancy:fb_radius = "10dp"
            fancy:fb_fontIconResource="&#xf199;"
            fancy:fb_borderWidth="1dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#cbcbcb"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_sound"
            android:onClick="bukaRs"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            fancy:fb_radius = "10dp"
            fancy:fb_fontIconResource="&#xf001;"
            fancy:fb_borderWidth="1dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#cbcbcb"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tts"
            android:onClick="bukaTts"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            fancy:fb_radius = "10dp"
            fancy:fb_fontIconResource="&#xf304;"
            fancy:fb_borderWidth="1dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#cbcbcb"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stt"
            android:onClick="bukaTts"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            fancy:fb_radius = "10dp"
            fancy:fb_fontIconResource="&#xf0a1;"
            fancy:fb_borderWidth="1dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#cbcbcb"/>


        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:onClick="bukaCamera"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            fancy:fb_radius = "10dp"
            fancy:fb_fontIconResource="&#xf030;"
            fancy:fb_borderWidth="1dp"
            android:padding="10dp"
            fancy:fb_defaultColor="#cbcbcb"/>
    </LinearLayout>

</ScrollView>